SYM-7444: Upgraded Spring Boot to 4.0.6